--- a/sales.html
+++ b/sales.html
@@ -30,6 +30,7 @@
 <body>
     <h1>Welcome to Salmon Cookies</h1>
     <img src="https://codefellows.github.io/code-201-guide/curriculum/class-06/lab/assets/salmon.png" alt="">
+    <div id="parent"></div>
     <script src="app.js"></script>
 </body>
 </html>
