--- a/sales.html
+++ b/sales.html
@@ -25,11 +25,42 @@
             background-color: rgba(211, 154, 30, 0.575);
             color: rgba(211, 154, 30, 0.575);
         }
+        table, th, td {
+            border: 1px solid orangered;
+            text-align: center;
+        }
+        table{
+            background-color: gold;
+            width: 100%;
+        }
     </style>
 </head>
 <body>
     <h1>Welcome to Salmon Cookies</h1>
     <img src="https://codefellows.github.io/code-201-guide/curriculum/class-06/lab/assets/salmon.png" alt="">
+    <div id="container"></div>
     <script src="app.js"></script>
 </body>
 </html>
+
+<!-- <table>
+    <thead>
+    <tr>
+        <th>name</th>
+        <th>height</th>
+        <th>place</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>Monte Falco</td>
+        <td>1658</td>
+        <td>Parco Foreste Casentinesi</td>
+    </tr>
+    <tr>
+        <td>Monte Falterona</td>
+        <td>1654</td>
+        <td>Parco Foreste Casentinesi</td>
+    </tr>
+    </tbody>
+</table> -->
