added content to index.html

--- a/sales.html
+++ b/sales.html
@@ -39,6 +39,7 @@
     <h1>Welcome to Salmon Cookies</h1>
     <img src="https://codefellows.github.io/code-201-guide/curriculum/class-06/lab/assets/salmon.png" alt="">
     <div id="container"></div>
+    <button><a href="index.html">Check Our Sales Page</a></button>
     <script src="app.js"></script>
 </body>
 </html>
