--- a/index.html
+++ b/index.html
@@ -47,8 +47,17 @@
             text-align: center;
             font-size: x-large;
         }
+        button{
+            padding: 20px;
+            border: none;
+            float: left;
+            width: 100%;
+            margin: 30px 0;
+            background-color: #ebc20b;
+        }
         a{
             text-decoration: none;
+            color: red;
         }
     </style>
 </head>
