--- a/sales.html
+++ b/sales.html
@@ -1,45 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salmon Cookies</title>
     <style>
-        img{
+        img {
             display: block;
             margin-left: auto;
             margin-right: auto;
             width: 50%;
         }
-        h1{
+
+        h1 {
             background-color: rgba(211, 154, 30, 0.575);
             text-align: center;
         }
-        h2, li{
+
+        h2,
+        li {
             color: chocolate;
             text-align: center;
         }
-        .breaker{
+
+        .breaker {
             width: 100%;
             background-color: rgba(211, 154, 30, 0.575);
             color: rgba(211, 154, 30, 0.575);
         }
-        table, th, td {
+
+        table,
+        th,
+        td {
             border: 1px solid orangered;
             text-align: center;
         }
-        table{
+
+        table {
             background-color: gold;
             width: 100%;
         }
+        input,
+        select {
+            width: 100%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+            align-items: center;
+        }
+
+        input[type=submit] {
+            width: 100%;
+            background-color: #d4ac29;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        input:invalid {
+        box-shadow: 0 0 5px 1px red;
+        }
+        input[type=submit]:hover {
+            background-color: #ebc20b;
+        }
+        button{
+            padding: 20px;
+            border: none;
+            float: left;
+            width: 100%;
+            margin: 30px 0;
+            background-color: #ebc20b;
+        }
+        a{
+            text-decoration: none;
+            color: red;
+        }
     </style>
 </head>
+
 <body>
     <h1>Welcome to Salmon Cookies</h1>
     <img src="https://codefellows.github.io/code-201-guide/curriculum/class-06/lab/assets/salmon.png" alt="">
-    <div id="container"></div>
-    <button><a href="index.html">Check Our Sales Page</a></button>
+    <div id="container">
+        <form id="form">
+            <fieldset>
+                <legend>Enter new City Details:</legend>
+                <label for="city">City:</label>
+                <input type="text" id="city" name="city" placeholder="City" required><br><br>
+                <label for="min">Min:</label>
+                <input type="number" id="min" name="min" min="1"  placeholder="Minimum" required><br><br>
+                <label for="max">Max:</label>
+                <input type="number" id="max" name="max" min="1"  placeholder="Maximum" required><br><br>
+                <label for="avg">Avg:</label>
+                <input type="float" id="avg" name="avg" placeholder="Average" required><br><br>
+                <input type="submit" value="Submit">
+            </fieldset>
+        </form>
+    </div>
+        <button><a href="index.html">Check Our Main Page</a></button>
     <script src="app.js"></script>
 </body>
+
 </html>
