--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salmon Cookies</title>
     <style>
-        h1{
+        h1 {
             text-align: center;
             background-color: orange;
         }
-        h2{
+
+        h2 {
             text-align: center;
             background-color: orangered;
         }
-        .fishes img{
+
+        .fishes img {
             float: left;
             width: 20%;
             height: 200px;
         }
-        .info p{
+
+        .info p {
             margin: 50px;
             color: orangered;
             background-color: black;
@@ -27,14 +31,16 @@
             text-align: center;
             font-weight: 100px;
         }
-        .info img{
+
+        .info img {
             display: block;
             margin-left: auto;
             margin-right: auto;
             width: 50%;
             height: 400px;
         }
-        .locations{
+
+        .locations {
             background-color: chocolate;
             margin: 50px;
             display: flex;
@@ -42,12 +48,14 @@
             align-items: center;
             font-size: x-large;
         }
-        .hours-open{
-            background-color:chocolate;
+
+        .hours-open {
+            background-color: chocolate;
             text-align: center;
             font-size: x-large;
         }
-        button{
+
+        button {
             padding: 20px;
             border: none;
             float: left;
@@ -55,12 +63,14 @@
             margin: 30px 0;
             background-color: #ebc20b;
         }
-        a{
+
+        a {
             text-decoration: none;
             color: red;
         }
     </style>
 </head>
+
 <body>
     <h1>Salmon Cookies</h1>
     <div class="fishes">
@@ -68,7 +78,8 @@
         <img src="https://github.com/LTUC/amman-201d33/blob/main/class-08/lab-b/assets/chinook.jpg?raw=true" alt="">
         <img src="https://github.com/LTUC/amman-201d33/blob/main/class-08/lab-b/assets/cutter.jpeg?raw=true" alt="">
         <img src="https://github.com/LTUC/amman-201d33/blob/main/class-08/lab-b/assets/fish.jpg?raw=true" alt="">
-        <img src="https://github.com/LTUC/amman-201d33/blob/main/class-08/lab-b/assets/frosted-cookie.jpg?raw=true" alt="">
+        <img src="https://github.com/LTUC/amman-201d33/blob/main/class-08/lab-b/assets/frosted-cookie.jpg?raw=true"
+            alt="">
         <img src="https://github.com/LTUC/amman-201d33/blob/main/class-08/lab-b/assets/salmon.png?raw=true" alt="">
     </div>
     <div class="info">
@@ -91,7 +102,7 @@
         <br>
         <p>mobile: 0790951509 E-mail: fero.nofal@gmail.com</p>
     </div>
-        <button><a href="sales.html">Check Our Sales Page</a></button>
+    <button><a href="sales.html">Check Our Sales Page</a></button>
 </body>
 
 
