--- a/sales.html
+++ b/sales.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salmon Cookies</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@200&display=swap');
+
+        body {
+            background-color: #A67B3D;
+        }
         img {
             display: block;
             margin-left: auto;
@@ -15,6 +20,7 @@
         }
 
         h1 {
+            font-family: 'Tajawal', sans-serif;
             background-color: rgba(211, 154, 30, 0.575);
             text-align: center;
         }
@@ -41,6 +47,7 @@
         table {
             background-color: gold;
             width: 100%;
+            font-family: Arial, Helvetica, sans-serif;
         }
 
         input,
@@ -84,7 +91,7 @@
 
         a {
             text-decoration: none;
-            color: red;
+            color: black;
         }
     </style>
 </head>
